# Reducio

./: README.md
AndroidRuntimeEvaluation/: gradle.properties  settings.gradle
AndroidRuntimeEvaluation/app/: build.gradle
AndroidRuntimeEvaluation/app/src/: CMakeLists.txt
AndroidRuntimeEvaluation/app/src/main/: AndroidManifest.xml
AndroidRuntimeEvaluation/app/src/main/java/com/main/tflmodelruntimeevaluation/: MainActivity.java  RuntimeEvaluation.java
AndroidRuntimeEvaluation/app/src/main/jni/: Android.mk  com_main_tflmodelruntimeevaluation_RuntimeEvaluation.cpp  com_main_tflmodelruntimeevaluation_RuntimeEvaluation.h
AndroidRuntimeEvaluation/app/src/main/res/layout/: activity_main.xml
AndroidRuntimeEvaluation/app/src/main/res/values/: strings.xml  themes.xml
AndroidRuntimeEvaluation/app/src/main/res/values-night/: themes.xml
AndroidRuntimeEvaluation/gradle/wrapper/: gradle-wrapper.properties
Main/: dataset.py  differentiable_search.py  ds_tf.py  ds_worker_tf.py  ea.py  ea_code_tf.py  ea_test.py  graph_seq.py  init_ea.py  runtime_evaluation.py  score.py  second_train_tf.py  train_tf.py  train_worker_tf.py
RuntimeEvaluationHttpServer/: app.py  job_recorder.py  sqlite_project_analysis.py  sqlite_project_fetcher.py  tf_lite_converter.py
